# ARCRacing

./: .gitignore  LICENSE  README.md  fisheye_f1p8_camera_calibration.pkl  lights.py  playback.launch  shutdown_car.sh  start_car.sh  system.rviz  vector79-jetson.launch  vector79-pi.launch  vector79.launch
LCD/: char_lcd.py  check_cpu_temp.sh  init_display.py
arduino/: .gitignore
arduino/9DoF_sonars/: 9DoF_sonars.ino
arduino/Display/: Display.ino
camera_calibration/: Convert Calibration to protocol 2.ipynb  camera_calibration.ipynb  fisheye_f1p8_camera_calibration.pkl  fisheye_f1p8_camera_calibration_protocol_2.pkl
ros_system_ws/: sudo
ros_system_ws/devel/: .catkin  (+3 more)
ros_system_ws/src/vector79/: CMakeLists.txt  hello.cpp  package.xml  traxxas.urdf
ros_system_ws/src/vector79/scripts/: ._bus_playback.py  ArduinoBoard.py  PyCmdMessenger.py  US_9DoF_listener.py  bus_listener.py  bus_playback.py  car_communicator.py  extract.py  lcd_output.py  light_system.py  listener.py  model.json  pilot.py  pilot_reference.py  predict_steering_angle.py  talker.py  transfer_learn.py  voltage_monitor.py
training/: .gitignore  Train_Vector79.ipynb  Transfer_learn_to_Vector79 (1).py  Transfer_learn_to_Vector79-Deeper Network.ipynb  Transfer_learn_to_Vector79.ipynb  extract.py  model_with_speed_history.ipynb  prep+car+data.ipynb  prep_car.ipynb  prep_car.py  prep_car_data.ipynb  prep_car_data_from_old_warehouse.ipynb  prep_car_data_shadow.ipynb  prep_car_data_v2.ipynb  record.sh  sandbox.ipynb  train.py  view history.ipynb
working/: Kalman Fileters.ipynb  throttle curves.ipynb
(+51 files in other folders)
